...
  <string name="ux100_chat_role_reset">Отменить изменения роли</string>
  <string name="ux100_chat_archive_search">Найти архивный канал</string>
  <string name="ux100_chat_category_search">Найти категорию</string>
  <string name="ux100_chat_preview_search">Найти участника для просмотра</string>
  <string name="ux100_chat_form_question_required">Обязательный вопрос</string>
  <string name="ux100_chat_form_question_optional">Необязательный вопрос</string>
  <string name="ux100_chat_playback_seek">Позиция воспроизведения</string>
  <string name="ux100_chat_access_reset">Вернуть текущие правила доступа</string>
  <string name="ux100_chat_affected_search">Найти участника в проверке доступа</string>
  <string name="ux100_chat_affected_changed">Только изменённые права</string>
  <string name="ux100_chat_question_validation">Проверка вопроса</string>
  <string name="ux100_chat_question_text_problem">Вопрос %1$d: введите текст вопроса (до 400 символов).</string>
  <string name="ux100_chat_people_chat_search">Участник или личный чат</string>
...
